@@ -80,6 +80,11 @@ class BuildCharm(SnapBuildProxyOperationMixin, VCSOperationMixin,
                 if self.backend.is_package_available(dep):
                     deps.append(dep)
         deps.extend(self.vcs_deps)
+        # See charmcraft.provider.CharmcraftBuilddBaseConfiguration.setup.
+        deps.extend([
+            "python3-pip",
+            "python3-setuptools",
+            ])
         self.backend.run(["apt-get", "-y", "install"] + deps)
         if self.args.backend in ("lxd", "fake"):
             self.snap_store_set_proxy()
@@ -115,11 +120,12 @@ class BuildCharm(SnapBuildProxyOperationMixin, VCSOperationMixin,
             self.args.build_path)
         check_path_escape(self.buildd_path, build_context_path)
         env = OrderedDict()
+        env["CHARMCRAFT_MANAGED_MODE"] = "1"
         if self.args.proxy_url:
             env["http_proxy"] = self.args.proxy_url
             env["https_proxy"] = self.args.proxy_url
             env["GIT_PROXY_COMMAND"] = "/usr/local/bin/snap-git-proxy"
-        args = ["charmcraft", "build", "-v", "-f", build_context_path]
+        args = ["charmcraft", "build", "-v", "-p", build_context_path, "-f", build_context_path]
         self.run_build_command(args, env=env)
 
     def run(self):
